--- a/css/view.less
+++ b/css/view.less
@@ -66,6 +66,7 @@
 
 .variables {
   .value-container {
+    position: relative;
     .read, .write {
       font-size: x-small;
       display: none;
@@ -83,6 +84,8 @@
   }
   .value-edit {
     display: none;
+    padding: 6px 1px;
+    width: 42px;
   }
 }
 
